# Real-Time-Stock-Sentiment-Analytics-Pipeline

./: .gitignore  Dockerfile  README.md  client.py  config.py  grafana-dashboard.json  pyproject.toml  requirements.txt  transform_kaggle_dataset.py
.github/workflows/: ci-cd.yml
api/protos/: sentiment.proto  sentiment_pb2.py  sentiment_pb2_grpc.py
api/src/: server.py  service.py
api/src/config/: logging.py  logging.yaml  settings.py
api/src/data/: models.py  schema.py
api/tests/: test_service.py
archive/: transformed_sentiment_data.csv
deployment/docker/api/: Dockerfile
deployment/docker/ingestion/: Dockerfile
deployment/docker/processing/: Dockerfile
deployment/istio/: virtual-service.yaml
deployment/k8s/: api.yaml  cloudbuild.yaml  deployment.yaml  grafana.yaml  ingestion.yaml  processing.yaml
ingestion/src/: fetcher.py  storage.py
ingestion/tests/: test_fetcher.py
processing/src/: bigquery.py  pipeline.py  sentiment.py
processing/tests/: test_pipeline.py
scripts/: build_protos.sh  load_test.py
tests/: test_e2e.py
